Fix columns gap

--- a/assets/css/blocks/columns.scss
+++ b/assets/css/blocks/columns.scss
@@ -38,7 +38,7 @@
 	border-right: -1rem;
 
 	> .wp-block-column {
-		border-left: 1rem solid transparent;
-		border-right: 1rem solid transparent;
+		// border-left: 1rem solid transparent;
+		// border-right: 1rem solid transparent;
 	}
 }
